- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    Qt Creator 2.6.0
 - 
    None
 
- 
        a1ef043bfbfa0e24c73fb77addac361fa9d2913e
 
- create a qtquick1 UI project using the project wizard
 - try to run it
 
get the following error:
qmlscene: 'import QtQuick 1.1' is no longer supported.
Use qmlviewer to load file '/home/baijing/work/examples/rc1-qml1/rc1-qml1.qml'.
- relates to
 - 
                    
QTCREATORBUG-12346 Creator tries running Qt Quick 1 UI project in qmlscene by default
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTCREATORBUG-8358 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 45199,2 | QmlProject: Choose right run configuration in wizard | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 | 
| 45216,3 | QmlProject: Add new 'defaultImport' property to .qmlproject file format | master | qt-creator/qt-creator | Status: ABANDONED | -1 | 0 | 
| 45345,2 | QmlProject: Detect import type from mainFile | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |